# Molyas

./: CMakeLists.txt  README.md  distrodetector.cpp  distrodetector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
